--- a/css/article.css
+++ b/css/article.css
@@ -2,8 +2,14 @@
     margin: 0 auto;
     max-width: 1000px;
     padding: 10px;
-    border-top: 1px solid #ddd;
-    color: #555;
+    color: white;
+}
+.article .box{
+    display: flex;
+    margin-top: 60px;
+    align-items: center;
+    background-color: rgba(51, 122, 183, 0.1);
+    color: white;
 }
 .article .title{
     display: flex;
@@ -13,12 +19,12 @@
     font-weight: bold;
 }
 .article .content{
-
     text-indent: 2em;
     margin-top: 5px;
     font-size: 1.7em;
 }
 .article .comment-button{
+    font-size: 1.3em;
     align-self: flex-end;
     margin: 20px auto;
     padding: 10px 20px;
@@ -46,7 +52,8 @@
 .close-button, .submit-button {
     display: block;
     margin: 10px auto;
-    padding: 5px 10px;
+    padding: 3px 6px;
+    font-size: 1.3em;
     background-color: #007bff;
     color: white;
     border: none;
@@ -57,3 +64,4 @@
 .close-button {
     background-color: red;
 }
+
